--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,11 @@
 {
-    "nowConfig": {
-        "rewrites": [
-          {
-            "source": "/(.*)",
-            "destination": "/index.html"
-          }
-        ]
+
+  "headers": [
+    {
+      "key": "X-Content-Type-Options",
+      "value": "nosniff"
+    }
+  ]
+    
       }
       
-}
